2nd part of implementation of switch expression; changes in prepwork to make variables in switch entry blocks visible